--- a/app/src/main/res/layout/activity_animals_detailed_edit.xml
+++ b/app/src/main/res/layout/activity_animals_detailed_edit.xml
@@ -21,6 +21,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
+            android:textColor="#000000"
             android:inputType="textPersonName"
             android:text="@string/str_animals_detailed_edit_Value"
             app:layout_constraintEnd_toEndOf="parent"
@@ -81,6 +82,7 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:text="@string/str_animals_detailed_edit_Feature"
+            android:textColor="#000000"
             app:layout_constraintEnd_toStartOf="@+id/animals_detailed_edit_Value_pt"
             app:layout_constraintHorizontal_bias="0.727"
             app:layout_constraintStart_toStartOf="parent"
