--- a/app/src/main/res/layout/activity_calendar_event_details.xml
+++ b/app/src/main/res/layout/activity_calendar_event_details.xml
@@ -18,6 +18,7 @@
             android:layout_marginTop="52dp"
             android:text="@string/str_calendar_event_details_Task"
             android:textSize="16sp"
+            android:textColor="#000000"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/calendar_event_details_Task_pt"
             app:layout_constraintHorizontal_bias="0.464"
@@ -30,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="76dp"
             android:text="@string/str_calendar_event_details_Date"
+            android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/calendar_event_details_DatePicker_btn"
@@ -43,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="44dp"
+            android:textColor="#000000"
             android:ems="10"
             android:hint="@string/str_calendar_event_details_Task"
             android:inputType="textPersonName"
@@ -60,6 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="64dp"
+            android:textColor="#000000"
             android:layout_marginEnd="32dp"
             android:hint="@string/str_calendar_event_details_SelectField"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,6 +73,7 @@
             <AutoCompleteTextView
                 android:id="@+id/calendar_event_details_auto_complete_txt"
                 android:layout_width="match_parent"
+                android:textColor="#000000"
                 android:layout_height="wrap_content"
                 android:inputType="none" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -81,6 +86,7 @@
             android:layout_marginTop="60dp"
             android:layout_marginEnd="72dp"
             android:backgroundTint="#9975A347"
+
             android:onClick="openDatePicker"
             android:text="@string/str_calendar_event_details_Date"
             android:textSize="16sp"
