--- a/app/src/main/res/layout/activity_calendar_new_event.xml
+++ b/app/src/main/res/layout/activity_calendar_new_event.xml
@@ -26,6 +26,7 @@
             android:layout_marginTop="64dp"
             android:layout_marginEnd="32dp"
             android:hint="@string/str_calendar_new_event_SelectField"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/newCalendarEvent_toolbar">
@@ -35,6 +36,7 @@
                 android:id="@+id/auto_complete_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#000000"
                 android:inputType="none" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -48,6 +50,7 @@
             android:text="@string/str_calendar_new_event_Date"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:textColor="#000000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
             tools:text="@string/str_calendar_new_event_Date" />
@@ -79,6 +82,7 @@
             android:layout_marginTop="92dp"
             android:text="@string/str_calendar_new_event_Task"
             android:textSize="16sp"
+            android:textColor="#000000"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.096"
@@ -91,6 +95,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="64dp"
             android:ems="10"
+            android:textColor="#000000"
             android:hint="@string/str_calendar_new_event_Empty"
             android:inputType="textPersonName"
             android:textAlignment="viewStart"
