--- a/app/src/main/res/layout/activity_crops_detailed_edit.xml
+++ b/app/src/main/res/layout/activity_crops_detailed_edit.xml
@@ -24,6 +24,7 @@
             android:layout_height="49dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
+            android:textColor="#000000"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="@string/str_animals_detailed_edit_Value"
@@ -81,6 +82,7 @@
             android:id="@+id/crops_detailed_edit_Features_pt"
             android:layout_width="173dp"
             android:layout_height="49dp"
+            android:textColor="#000000"
             android:layout_marginTop="32dp"
             android:ems="10"
             android:inputType="textPersonName"
