--- a/app/src/main/res/layout/activity_notes_general.xml
+++ b/app/src/main/res/layout/activity_notes_general.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
+            android:textColor="#000000"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
             android:hint="@string/str_calendar_new_event_SelectField"
@@ -32,6 +33,7 @@
                 android:id="@+id/notes_general_auto_complete_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#000000"
                 android:inputType="none" />
         </com.google.android.material.textfield.TextInputLayout>
 
