--- a/app/src/main/res/layout/activity_notes_new.xml
+++ b/app/src/main/res/layout/activity_notes_new.xml
@@ -20,7 +20,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:textColor="#000000"
+            android:textColorHint="#969393"
             android:layout_marginStart="32dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="32dp"
@@ -32,8 +33,9 @@
             <AutoCompleteTextView
                 android:id="@+id/notes_new_auto_complete_txt"
                 android:layout_width="match_parent"
-
+                android:textColor="#000000"
                 android:layout_height="wrap_content"
+                android:textColorHint="#969393"
                 android:inputType="none" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -72,10 +74,11 @@
         <EditText
             android:id="@+id/notes_new_Note_pt"
             android:layout_width="wrap_content"
-
+            android:textColor="#000000"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:ems="15"
+            android:textColorHint="#969393"
             android:hint="@string/str_notes_new_Note"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
