--- a/app/src/main/res/layout/activity_weather_forecast.xml
+++ b/app/src/main/res/layout/activity_weather_forecast.xml
@@ -25,8 +25,8 @@
             android:hint="Enter City Name"
             android:inputType="textPersonName"
             android:paddingLeft="15dp"
-            android:textColor="#6E6C6C"
-            android:textColorHint="#6E6C6C"
+            android:textColor="#000000"
+            android:textColorHint="#000000"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
