--- a/app/src/main/res/layout/animal_feature_adapter_view.xml
+++ b/app/src/main/res/layout/animal_feature_adapter_view.xml
@@ -14,6 +14,7 @@
         android:text="feature"
         android:textStyle="bold"
         android:textSize="16dp"
+        android:textColor="#000000"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:id="@+id/animal_feature_adapter_feature"
@@ -26,6 +27,7 @@
             android:gravity="center"
             android:text="feature value"
             android:textSize="16dp"
+            android:textColor="#000000"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_weight="50"
