--- a/app/src/main/res/layout/crops_feature_adapter_view.xml
+++ b/app/src/main/res/layout/crops_feature_adapter_view.xml
@@ -14,6 +14,7 @@
         android:textStyle="bold"
         android:textSize="16dp"
         android:text="feature"
+        android:textColor="#000000"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:id="@+id/animal_feature_adapter_feature"
@@ -29,6 +30,7 @@
         android:layout_height="60dp"
         android:textStyle="bold"
         android:layout_weight="50"
+        android:textColor="#000000"
         android:id="@+id/animal_feature_adapter_value"/>
 
 
