--- a/app/src/main/res/layout/crops_info_adapter_view.xml
+++ b/app/src/main/res/layout/crops_info_adapter_view.xml
@@ -16,7 +16,7 @@
         android:layout_height="60dp"
         android:textStyle="bold"
         android:elevation="1dp"
-        android:textColor="#334D1A"
+        android:textColor="#000000"
         android:textSize="16dp"
         android:id="@+id/animals_info_adapter_Name_tv"
         android:layout_weight="66.6"/>
@@ -36,7 +36,7 @@
             android:textStyle="bold"
             android:layout_height="30dp"
             android:elevation="1dp"
-            android:textColor="#334D1A"
+            android:textColor="#000000"
             android:id="@+id/animals_info_adapter_TotalNumber_tv"/>
 
         <TextView
@@ -47,7 +47,7 @@
             android:textStyle="bold"
             android:textSize="16dp"
             android:elevation="1dp"
-            android:textColor="#334D1A"
+            android:textColor="#000000"
             android:id="@+id/animals_info_adapter_Number_tv"
             android:layout_below="@+id/textView2"/>
 
