--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -8,11 +8,13 @@
         android:id="@+id/dialog_feature"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:hint="Feature" />
 
     <EditText
         android:id="@+id/dialog_value"
         android:layout_width="match_parent"
+        android:textColor="#000000"
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_feature"
         android:layout_alignParentStart="true"
