--- a/app/src/main/res/layout/notes_adapter_view.xml
+++ b/app/src/main/res/layout/notes_adapter_view.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:text="Note"
         android:textSize="22dp"
-        android:textColor="#334D1A"
+        android:textColor="#000000"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:background="#D98DA5A3 "
