--- a/app/src/main/res/layout/todo_adapter_view.xml
+++ b/app/src/main/res/layout/todo_adapter_view.xml
@@ -15,7 +15,7 @@
         android:layout_height="60dp"
         android:textStyle="bold"
         android:textSize="16dp"
-        android:textColor="#334D1A"
+        android:textColor="#000000"
         android:id="@+id/animals_todo_adapter_Task_tv"
         android:layout_weight="66.6"/>
 
@@ -30,7 +30,7 @@
             android:text="Date:"
             android:textStyle="bold"
             android:textSize="16dp"
-            android:textColor="#334D1A"
+            android:textColor="#000000"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:id="@+id/animals_todo_adapter_DateUp_tv"/>
@@ -42,7 +42,7 @@
             android:textSize="16dp"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:textColor="#334D1A"
+            android:textColor="#000000"
             android:id="@+id/animals_todo_adapter_DateDown_tv"
             android:layout_below="@+id/textView2"/>
     </LinearLayout>
